src/app.css
body {
  font-family: Arial, Helvetica, sans-serif;
  padding: 0;
  margin: 0;
}

.app {
  width: 100vw;
  height: 100vh;
  display: flex;
  flex-direction: row;
  gap: 10px;
}

.app > * {
  width: 100%;
  height: 100%;
}

